@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.274 2005/11/01 21:39:31 rillig Exp $
+# $NetBSD: Makefile,v 1.275 2005/11/01 23:08:42 rillig Exp $
 #
 
-DISTNAME=	pkglint-4.32.1
+DISTNAME=	pkglint-4.32.2
 CATEGORIES=	pkgtools devel
 MASTER_SITES=	# empty
 DISTFILES=	# empty
